@@ -33,22 +33,35 @@ module.exports = class PowerCommand extends Command {
         }
 		let words = args.split(' ');
 		let PowerAction = words.slice(0).join(' ');
-        if (!PowerAction) return message.reply(":warning: Do you want to restart or shutdown the bot? Ex: -power <restart or shutdown>").then(message => {
+        if (!PowerAction) return message.reply(":warning: Incorrect Usage. Ex: -power <restart or shutdown>").then(message => {
             message.delete({timeout: 10000});
         });
 
         if (PowerAction == "restart"){
             console.log(chalk.red(`${message.author.tag} Restarted the bot!`));
-            message.channel.send("Restarting Bot...");
+            const RestartingBot = new discord.MessageEmbed()
+                .setColor("BLUE")
+                .setDescription(":hourglass_flowing_sand: Restarting bot...")
+            message.channel.send(RestartingBot);
             client.destroy().then(() => {
                 client.login(key);
             });
-            message.channel.send(`The bot is back online!`);
+            const BotOnline = new discord.MessageEmbed()
+                .setColor("BLUE")
+                .setDescription(":white_check_mark: The bot is back online!")
+            message.channel.send(BotOnline);
+            console.log(chalk.green("The bot is back online!"));
         }
         if (PowerAction == "shutdown"){
             console.log(chalk.red(`${message.author.tag} Shut down the bot!`));
-            message.channel.send(`Shutting down bot...`).then(message => {
-                message.channel.send("The bot is now offline.").then(() => {
+            const TurningOffBot = new discord.MessageEmbed()
+                .setColor("BLUE")
+                .setDescription(":arrows_counterclockwise: Turning off bot...")
+            message.channel.send(TurningOffBot).then(message => {
+                const BotOffline = new discord.MessageEmbed()
+                .setColor("BLUE")
+                .setDescription(":white_check_mark: The bot is now offline!")
+            message.channel.send(BotOffline).then(() => {
                     process.exit();
                 });
             });
